Episode 03 - Laying the Foundation Added

--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "namaste-react---akshay-saini",
+  "name": "namaste-react-akshay-saini",
   "version": "1.0.0",
   "description": "This is Namaste React by Akshay Saini",
   "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "jest"
   },
   "repository": {
