--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Sreenivasulu-Kalluru/Namaste-React#readme",
   "devDependencies": {
+    "@babel/core": "^7.21.4",
     "parcel": "^2.8.3",
     "process": "^0.11.10"
   },
