--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
+    "react-router-dom": "^6.11.2",
+    "react-shimmer": "^3.2.0",
+    "shimmer-ui-effect": "^1.3.4"
   },
   "browserslist": [
     "last 2 Chrome version",
